--- a/ffmpeg-pv.yaml
+++ b/ffmpeg-pv.yaml
@@ -1,23 +1,14 @@
-#TODO: Configure and link with pvc and maybe pod in deployment file
 apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: ffmpeg-pv
+  labels:
+    type: local
 spec:
+  storageClassName: standard
   capacity:
-    storage: 10Gi
-  volumeMode: Filesystem
+    storage: 2Gi
   accessModes:
-  - ReadWriteOnce
-  persistentVolumeReclaimPolicy: Delete
-  storageClassName: local-storage
-  local:
-    path: /host
-  nodeAffinity:
-    required:
-      nodeSelectorTerms:
-      - matchExpressions:
-        - key: kubernetes.io/hostname
-          operator: In
-          values:
-          - example-node
+    - ReadWriteOnce
+  hostPath:
+    path: "/home/docker/videos"
