Added KEDA deployment and updated ffmpeg deployment names

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 node_modules
-honours-project-88f0c-firebase-adminsdk-pjyfq-4efabae31f.json
+honours-project-88f0c-firebase-adminsdk-pjyfq-be29971c7a.json
+files
