--- a/deploy/rabbitmq-secret.yaml
+++ b/deploy/rabbitmq-secret.yaml
@@ -3,4 +3,4 @@ kind: Secret
 metadata:
   name: rabbitmq-secret
 data:
-  host: YW1xcDovL2xvY2FsaG9zdDo1NjcyCg==
+  host: YW1xcDovL2d1ZXN0Omd1ZXN0QGxvY2FsaG9zdDo1NjcyCg== #amqp://guest:guest@localhost:5672
