--- a/deploy/rabbitmq-secret.yaml
+++ b/deploy/rabbitmq-secret.yaml
@@ -2,5 +2,6 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: rabbitmq-secret
+type: Opaque
 data:
-  host: YW1xcDovL2d1ZXN0Omd1ZXN0QGxvY2FsaG9zdDo1NjcyCg== #amqp://guest:guest@localhost:5672
+  RABBITMQ_ERLANG_COOKIE: R01TVlRZVFdSTEhTTFBPQlNWUUYK 
