--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "transcoding-website",
   "version": "1.0.0",
   "description": "Website for transcoding service",
-  "main": "fileHandling.js",
-  "dependencies": {},
+  "main": "index.js",
+  "dependencies": {
+    "express": "^4.17.1",
+    "socket.io": "^4.0.0"
+  },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
