--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node fileHandling.js & node receive.js"
+    "start": "node fileHandling.js"
   },
   "author": "",
   "license": "ISC"
