--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "amqplib": "^0.6.0",
     "body-parser": "^1.19.0",
+    "chokidar": "^3.5.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "firebase": "^8.2.6",
