--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.17.1",
     "firebase": "^8.2.6",
     "firebase-admin": "^9.4.2",
+    "fluent-ffmpeg": "^2.1.2",
     "multer": "^1.4.2",
     "socket.io": "^4.0.0"
   },
