Fixed permission errors in container. Transcoding after RabbitMQ message now works

--- a/containerApp/Dockerfile
+++ b/containerApp/Dockerfile
@@ -5,15 +5,15 @@ RUN apt-get update &&\
     yes | apt-get install ffmpeg
 
 #Create new user
-RUN useradd -ms /bin/bash user
-USER user
+#RUN useradd -ms /bin/bash user
+#USER user
 WORKDIR /home/user
 
 #Install npm packages
 RUN npm install amqplib fluent-ffmpeg
 
-RUN mkdir videos
-RUN chmod -R 777 videos
+#RUN mkdir videos
+#RUN chmod -R 777 videos
 
 COPY . .
 
