--- a/deploy/ffmpeg-deployment.yaml
+++ b/deploy/ffmpeg-deployment.yaml
@@ -22,6 +22,7 @@ spec:
             name: files-mount
           ports:
             - containerPort: 5672
+          imagePullPolicy: Never
           env:
           - name: RABBITMQ_ERLANG_COOKIE
             valueFrom:
