--- a/deploy/keda-deployment.yaml
+++ b/deploy/keda-deployment.yaml
@@ -11,5 +11,6 @@ spec:
   - type: rabbitmq
     metadata:
       host: amqp://EmZn4ScuOPLEU1CGIsFKOaQSCQdjhzca:dJhLl2aVF78Gn07g2yGoRuwjXSc6tT11@192.168.49.2:30861
-      queueLength: "1"
+      mode: QueueLength
+      value: "1"
       queueName: files
