--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase-admin": "^9.4.2",
     "fluent-ffmpeg": "^2.1.2",
     "multer": "^1.4.2",
+    "path": "^0.12.7",
     "socket.io": "^4.0.0"
   },
   "devDependencies": {},
