--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "fluent-ffmpeg": "^2.1.2",
     "multer": "^1.4.2",
     "path": "^0.12.7",
-    "socket.io": "^4.0.0"
+    "socket.io": "^4.0.0",
+    "socket.io-client": "^4.0.1"
   },
   "devDependencies": {},
   "scripts": {
