Updated scalability testing

--- a/scalabilityTesting/app/Dockerfile
+++ b/scalabilityTesting/app/Dockerfile
@@ -1,5 +1,13 @@
 FROM node
 
+#Create new user
+WORKDIR /home/user
+
+#Install npm packages
+RUN npm install amqplib
+
 COPY . .
 
 CMD ["node", "app.js"]
+
+EXPOSE 5672
