Scalability test now works, updated ffmpeg deployment with correct YAML tags

--- a/deploy/keda-deployment.yaml
+++ b/deploy/keda-deployment.yaml
@@ -2,16 +2,19 @@ apiVersion: keda.sh/v1alpha1
 kind: ScaledObject
 metadata:
   name: keda-deployment
+  labels:
+    apps: ffmpeg
+    deploymentName: ffmpeg
 spec:
   scaleTargetRef:
     name: ffmpeg
-  minReplicaCount: 0
-  maxReplicaCount: 10
+  pollingInterval: 30
   cooldownPeriod: 1200 #20 minutes, leaves time for transcoding to finish
+  #minReplicaCount: 0
+  maxReplicaCount: 10
   triggers:
   - type: rabbitmq
     metadata:
       host: amqp://EmZn4ScuOPLEU1CGIsFKOaQSCQdjhzca:dJhLl2aVF78Gn07g2yGoRuwjXSc6tT11@192.168.49.2:30861
-      mode: QueueLength
-      value: "1"
       queueName: files
+      queueLength: '1'
