--- a/scalabilityTesting/deploy/scale-deployment.yaml
+++ b/scalabilityTesting/deploy/scale-deployment.yaml
@@ -5,7 +5,6 @@ metadata:
   labels:
     app: scale
 spec:
-  replicas: 1
   selector: 
     matchLabels:
       app: scale
@@ -15,6 +14,14 @@ spec:
         app: scale
     spec:
       containers:
-        - name: scale-deployment
+        - name: scale
           image: bharper7/scale:v1
+          ports:
+            - containerPort: 5672
           imagePullPolicy: Never
+          env:
+          - name: RABBITMQ_ERLANG_COOKIE
+            valueFrom:
+              secretKeyRef:
+                name: rabbitmq-secret
+                key: RABBITMQ_ERLANG_COOKIE
